# TFLM_STM32H7XX

./: .mxproject  CMakeLists.txt  LIB_TEST.ioc  README.md  STM32H723XG_FLASH.ld
Core/Inc/: Debug_msg.h  Delay.h  ai_process.h  model.h  stm32h7xx_it.h
Core/Src/: Debug_msg.c  ai_process.cpp  gpio.c  main.c  stm32h7xx_it.c  usart.c
TFLM/: CMakeLists.txt
TFLM/tensorflow/compiler/mlir/lite/kernelsBACK/internal/: compatibility_macros.h
TFLM/tensorflow/compiler/mlir/lite/schemaBACK/: schema_utils.cc  schema_utils.h
TFLM/tensorflow/lite/micro/: debug_log.cc  micro_time.cc
TFLM/tensorflow/lite/schema/: schema_generated.h  schema_utils.h
cmake/stm32cubemx/: CMakeLists.txt
